Update 'go-nlkywhyb' component image to: quay.io/rhtap_qe/go-nlkywhyb:ca14ae4e2a3f9f9398f77e6da2555f2d8666d752@sha256:127d43a50fd31dc3455a0dc96992f0382024edce92228916aae0f035c83cfc1c

--- a/components/go-nlkywhyb/overlays/development/deployment-patch.yaml
+++ b/components/go-nlkywhyb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-nlkywhyb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-nlkywhyb:ca14ae4e2a3f9f9398f77e6da2555f2d8666d752@sha256:127d43a50fd31dc3455a0dc96992f0382024edce92228916aae0f035c83cfc1c
+          name: container-image
